--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,7 +3,7 @@ name: Deploy
 on:
   push:
     branches:
-      - master # or the branch you want to deploy from
+      - master 
 
 jobs:
   deploy:
@@ -22,5 +22,4 @@ jobs:
         mkdir -p ~/.ssh
         cp known_hosts ~/.ssh/known_hosts
         ssh -t -i keyfile ubuntu@ec2-16-171-142-0.eu-north-1.compute.amazonaws.com "sudo bash ~/deploy.sh"
-
 
